[package]
name = "wasm-module-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Needed to be able to call this library from external resources
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.85"

# Needed to optimize the wasm build 
[profile.release]
lto = true
